fix z-index context for arrow

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -37,8 +37,10 @@
 
 .arrow-button--wrapper {
     display: inline-block;
+    position: relative;
     padding: 2px 10px 2px 2px;
     overflow: hidden;
+    z-index: 1;
 }
 
 .arrow-button {
